--- a/VirtualEventAgenda/Pages/Index.razor
+++ b/VirtualEventAgenda/Pages/Index.razor
@@ -1,7 +1,42 @@
 ﻿@page "/"
+@using VirtualEventAgenda.Models
+@using VirtualEventAgenda.Data
 
-<h1>Hello, world!</h1>
+@inject JsonFileAgendaTopicService AgendaTopicsService
 
-Welcome to your new app.
+<h1>Agenda</h1>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quo mollitia, reiciendis pariatur eligendi saepe sed, repudiandae, minima nostrum earum natus. Labore quos unde vel repellat magni iusto numquam libero!</p>
+
+<table class="table" width ="80%">
+        <thead>
+            <tr>
+                <th>Von</th>
+                <th>Bis</th>
+                <th>Titel</th>
+                <th>Präsentation</th>
+                <th>Session</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var AgendaTopic in AgendaTopics)
+            {
+                <tr>
+                    <td>@AgendaTopic.StartTime</td>
+                    <td>@AgendaTopic.EndTime</td>
+                    <td>@AgendaTopic.Title</td>
+                    <td><a href="@AgendaTopic.PresentationUrl"><img src="/img/ppt.png" height="30px" /></a></td>
+                    <td><a href="@AgendaTopic.TeamsUrl"><img src="/img/teams.png" height="30px"/></a></td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+@code {
+    private IEnumerable<AgendaTopic> AgendaTopics;
+
+    protected override  void OnInitialized()
+    {
+        AgendaTopics = AgendaTopicsService.GetAgendaTopics();
+    }
+}
