--- a/WebApp-old/Pages/Agenda.razor
+++ b/WebApp-old/Pages/Agenda.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Agenda"
+@using WebApp.Models
 
 <h3>Agenda</h3>
 
@@ -18,7 +19,6 @@
     private IList<AgendaTopic> AgendaTopics = new List<AgendaTopic>(); 
     private string newTopic;
     
-
     private void AddTopic()
     {
         if (!string.IsNullOrWhiteSpace(newTopic))
