--- a/VirtualEventAgenda/Shared/NavMenu.razor
+++ b/VirtualEventAgenda/Shared/NavMenu.razor
@@ -13,6 +13,13 @@
             </NavLink>
         </li>
     </ul>
+    <ul class="nav flex-column">
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="BuildAgenda">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Build Agenda
+            </NavLink>
+        </li>
+    </ul>
 </div>
 
 @code {
