--- a/VirtualEventAgenda/Pages/Index.razor
+++ b/VirtualEventAgenda/Pages/Index.razor
@@ -6,34 +6,32 @@
 @inject JsonFileAgendaTopicService AgendaTopicsService
 
 @* TODO - get the event information out of a service/json?*@
-<h1>Agenda</h1>
+<div class="w-75 p-3">
+<h1>Hackathon</h1>
 @* TODO - Format of the Description*@
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quo mollitia, reiciendis pariatur eligendi saepe sed, repudiandae, minima nostrum earum natus. Labore quos unde vel repellat magni iusto numquam libero!</p>
+<div>
+<p class="text-left">
+in diesem Hackathon wollen wir praktisch durchspielen, was wir all schon oft theoretisch besprochen habe. Die Migration einer Applikation in die Cloud mit Azure Tools nach dem Microsoft Cloud Adoption Framework for Azure.</p>
+<p class="text-left">
+Wir starten mit dem Verständnis über die Kundensituation, machen ein Assessment der on-Premise Infrastruktur und Migrieren die komplette Applikation inkl. Datenbank in die Landing Zone in der Cloud. Das ganz machen wir aber nicht in Form von „Klick-Anleitungen“, sondern wir stellen und gestellten Herausforderungen und bringen unser Wissen zusammen um diese zu meistern!</p>
+<p class="text-left">
+Ergänzen werden wir das ganz mit ein paar Impulsvorträgen!
+</p>
+</div>
 
-<table class="table" width ="80%">
-        <thead>
-            <tr>
-                <th>Von</th>
-                <th>Bis</th>
-                <th>Titel</th>
-                <th>Präsentation</th>
-                <th>Session</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var AgendaTopic in AgendaTopics)
-            {
-                <tr>
-                    <td>@AgendaTopic.StartTime</td>
-                    <td>@AgendaTopic.EndTime</td>
-                    <td>@AgendaTopic.Title</td>
-                    @* // TODO - Check !Empty  *@
-                    <td><a href="@AgendaTopic.PresentationUrl"><img src="/img/ppt.png" height="30px" /></a></td>
-                    <td><a href="@AgendaTopic.TeamsUrl"><img src="/img/teams.png" height="30px"/></a></td>
-                </tr>
-            }
-        </tbody>
-    </table>
+@foreach (var AgendaTopic in AgendaTopics)
+{
+<div class="card" style="15rem">
+    <div class="card-body">
+        <h5 style="card-title">@AgendaTopic.Title</h5>
+        <h6 style="card-subtitle mb-2 text-muted">@AgendaTopic.StartTime - @AgendaTopic.EndTime</h6>
+        <p class="card-text">@AgendaTopic.Description</p>
+        <a href="@AgendaTopic.PresentationUrl" class="card-link"><img src="/img/ppt.png" height="30px" /></a>
+        <a href="@AgendaTopic.TeamsUrl" class="card-link"><img src="/img/teams.png" height="30px"/></a>
+    </div>
+</div>    
+}
+</div>
 
 @code {
     private IEnumerable<AgendaTopic> AgendaTopics;
