--- a/VirtualEventAgenda/Pages/BuildAgenda.razor
+++ b/VirtualEventAgenda/Pages/BuildAgenda.razor
@@ -4,54 +4,139 @@
 @using System.Linq
 
 @inject JsonFileAgendaTopicService AgendaTopicsService
-
 @* TODO - get the event information out of a service/json?*@
 <h1>Agenda Bearbeiten</h1>
 @* TODO - Format of the Description*@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quo mollitia, reiciendis pariatur eligendi saepe sed, repudiandae, minima nostrum earum natus. Labore quos unde vel repellat magni iusto numquam libero!</p>
 
 
-<table class="table" width ="80%">
-        <thead>
+
+<table class="table" width="80%">
+    <thead>
+        <tr>
+            <th></th>
+            <th>Start</th>
+            <th>End</th>
+            <th>Title</th>
+            <th>Descirption</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var AgendaTopic in AgendaTopics.OrderBy(t => t.OrderId ?? int.MaxValue))
+        {
             <tr>
-                <th>Start</th>
-                <th>End</th>
-                <th>Title</th>
-                <th>Descirption</th>
-                <th>Präsentation</th>
-                <th>Session</th>
+                <td><button class="btn btn-sm btn-info" type="button" @onclick=" e => SelectAgendaTopic(AgendaTopic.Id.ToString())" data-toggle="modal" data-target="#AgandaTopicModal"><span class="glyphicon glyphicon-pencil">a</span>Edit</button></td>
+                <td>@AgendaTopic.StartTime</td>
+                <td>@AgendaTopic.EndTime</td>
+                <td>@AgendaTopic.Title</td>
             </tr>
-        </thead>
-        <tbody>            
-            @foreach (var AgendaTopic in AgendaTopics.OrderBy(t => t.OrderId ?? int.MaxValue))
-            {
-                <tr>
-                    <td><input @bind="AgendaTopic.StartTime" /></td>
-                    <td><input @bind="AgendaTopic.EndTime" /></td>
-                    <td><input @bind="AgendaTopic.Title" /></td>
-                    <td><textarea @bind="AgendaTopic.Description" rows="3" /></td>
-                    @* // TODO - Check !Empty  *@
-                    <td><textarea @bind="AgendaTopic.PresentationUrl" rows="3" /></td>
-                    <td><input @bind="AgendaTopic.TeamsUrl" /></td>
-                </tr>
-            }
-        </tbody>
-    </table>
-    <button class="btn btn-primary" type="button" @onclick="HandleSubmit">Save</button>
+        }
+    </tbody>
+</table>
+<button class="btn btn-success" type="button" @onclick="NewAgendaTopic">New</button>
+<button class="btn btn-primary" type="button" @onclick="HandleSubmit">Save</button>
 
 
- @code {
-    private IEnumerable<AgendaTopic> AgendaTopics;
+@if (showDialog)
+{
+
+    <div class="modal fade show " id="AgandaTopicModal" style="display:block" role="dialog" >
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="AgandaTopicTitle">@selectedAgendaTopic.Title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="DialogCancel">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <table>
+                        <tr>
+                            <td>Title:</td>
+                            <td><input @bind="selectedAgendaTopic.Title" /></td>
+                        </tr>
+                        <tr>
+                            <td>Start:</td>
+                            <td><input @bind="selectedAgendaTopic.StartTime" /></td>
+                        </tr>
+                        <tr>
+                            <td>End:</td>
+                            <td><input @bind="selectedAgendaTopic.EndTime" /></td>
+                        </tr>
+                        <tr>
+                            <td>Description:</td>
+                            <td><textarea @bind="selectedAgendaTopic.Description" rows="5" /></td>
+                        </tr>
+                        <tr>
+                            <td>PPT-URL:</td>
+                            <td><textarea @bind="selectedAgendaTopic.PresentationUrl" rows="3" /></td>
+                        </tr>
+                        <tr>
+                            <td>Teams-URL:</td>
+                            <td><textarea @bind="selectedAgendaTopic.TeamsUrl" rows="3" /></td>
+                        </tr>
+                        <tr>
+                            <td>Order</td>
+                            <td><input @bind="selectedAgendaTopic.OrderId"  /></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn" @onclick="DialogCancel">Cancel</button>
+                    <button type="button" class="btn btn-danger" @onclick="DialogSave">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+
+@code {
+    private List<AgendaTopic> AgendaTopics;
+    AgendaTopic selectedAgendaTopic;
+    string selectedAgendaTopicID;
+    bool showDialog = false;
+    int maxID = 0;
+    int? maxOrderID = 0;
 
     // TODO Check - correct ?
-    protected override  void OnInitialized()
+    protected override void OnInitialized()
     {
-        AgendaTopics = AgendaTopicsService.GetAgendaTopics();
+        AgendaTopics = AgendaTopicsService.GetAgendaTopics().ToList();
+        maxID = AgendaTopics.Max(i => i.Id);
+        maxOrderID = AgendaTopics.Max(i => i.OrderId);
     }
 
-    private void HandleSubmit() 
+    private void HandleSubmit()
     {
         AgendaTopicsService.SaveAgendaTopicsAsync(AgendaTopics.ToArray()).Wait();
     }
-     
+
+
+
+    void SelectAgendaTopic(string AgendaTopicID)
+    {
+        selectedAgendaTopicID = AgendaTopicID;
+        selectedAgendaTopic = AgendaTopicsService.GetAgendaTopics().First(x => x.Id.ToString() == AgendaTopicID);
+        showDialog = true;
+    }
+
+    void DialogCancel() => showDialog = false;
+
+    void DialogSave()
+    {
+        AgendaTopicsService.SaveAgendaTopicsAsync(AgendaTopics.ToArray()).Wait();
+        showDialog = false;
+    }
+
+    void NewAgendaTopic()
+    {
+        AgendaTopic newEntry = new AgendaTopic();
+        newEntry.Id = maxID + 1;
+        newEntry.OrderId = maxOrderID + 1;
+        AgendaTopics.Add(newEntry);
+        this.DialogSave();
+    }
 }
+
+
