--- a/VirtualEventAgenda/Pages/BuildAgenda.razor
+++ b/VirtualEventAgenda/Pages/BuildAgenda.razor
@@ -5,7 +5,7 @@
 
 @inject JsonFileAgendaTopicService AgendaTopicsService
 <h1>Agenda Bearbeiten</h1>
-<p>Aktuelle Stand der Agenda:</p>
+<p>Aktuelle Stand der Agenda und Reihenfolge der Session:</p>
 
 <table class="table" width="80%">
     <thead>
