--- a/VirtualEventAgenda/Shared/NavMenu.razor
+++ b/VirtualEventAgenda/Shared/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
+
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">Virtual Event Agenda</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -9,18 +12,27 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Agenda
             </NavLink>
         </li>
     </ul>
-     <ul class="nav flex-column">
+    @if (@Configuration["UseAdmin"] == "true")
+    {
+        <ul class="nav flex-column">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="BuildAgenda">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Build Agenda
+                </NavLink>
+            </li>
+        </ul>
+    }
+    <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="BuildAgenda">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Build Agenda
+            <NavLink class="nav-link" href="Details">
+                <span class="oi oi-document" aria-hidden="true"></span> Details
             </NavLink>
         </li>
     </ul>
-    
 </div>
 
 @code {
