--- a/VirtualEventAgenda/Pages/Details.razor
+++ b/VirtualEventAgenda/Pages/Details.razor
@@ -1,41 +1,48 @@
 ﻿@page "/Details"
 
-<h3>Details</h3>
+<div class="w-75 p-3">
+    <h3>Details</h3>
 
-<div class="text-body">
-    Provide details about your virtual Event...
+    <div class="text-body">
+        Provide details about your virtual Event...
+    </div>
+
+    <p>&nbsp;</p>
+
+    <div class="text-body">
+        <h5>Division of the Teams</h5>
+        <div class="card-deck">
+            <div class="card">
+                <div class="card-title">
+                    <h6 class="card-title">Team A</h6>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">
+                        <ol class="card-text">
+                            <li>...</li>
+                            <li>...</li>
+                        </ol>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-title">
+                    <h6 class="card-title">Team B</h6>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">
+                        <ol>
+                            <li>...</li>
+                            <li>...</li>
+                        </ol>
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
 </div>
-
-<p>&nbsp;</p>
-
-<div class="text-body">
-    <h5>Division of the Teams</h5>
-    <table>
-        <thead>
-            <tr>
-                <th>Team A</th>
-                <th>Team B</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>
-                    <li>
-                        <ul>...</ul>
-                        <ul>...</ul>
-                    </li>
-                </td>
-                <td>
-                    <li>
-                        <ul>...</ul>
-                        <ul>...</ul>
-                    </li>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-
 @code {
 
 }
