--- a/VirtualEventAgenda/Pages/_Host.cshtml
+++ b/VirtualEventAgenda/Pages/_Host.cshtml
@@ -14,6 +14,10 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
     <app>
@@ -32,6 +36,10 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
-    
+    <script>
+        $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 </html>
